tests/NormalTests/paczka1/fuzzy1/62509399.err
Error in line 1: gSLEpHbrJ S286 f3,1
Error in line 4: RJ04d1hpS2 A420 39,8
Error in line 11: 9GC3pxUeHY S223 5,2
Error in line 12: 9GC3pxUeHY S286 10,2
Error in line 17: S286 A425 37,5
Error in line 22: S286 S223 49,2
Error in line 24: RJ04d1hpS2 A425 6,9
Error in line 31: RJ04d1hpS2 A420 85,0
